--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vibepaper-generator",
+  "name": "vibepaper-generator-2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
