한국어로 변경

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vibepaper-generator-2",
+  "name": "내-폰을-위한-ai-배경화면-짤-생성기",
   "private": true,
   "version": "0.0.0",
   "type": "module",
